# ms2-peptide-fragmentation-using-GNN

./: .gitignore  LITERATURE_REVIEW.md  MASTER_PLAN.md  PROJECT_REVIEW.md  PUBLICATION_ROADMAP.md  README.md  RESEARCH_PLAN.md  eval.py  fragment_gnn.pt  main.py  plan.md  predict copy.py  predict.py  predict_cli_version.py  pyproject.toml  requirements.txt  temp.txt  test.py  train.py
app/: llm_utils.py  streamlit_app.py
configs/: cleavage_gcn.yaml
pepfraggnn/: __init__.py  config.py  engine.py  losses.py  metrics.py  seed.py  utils.py
pepfraggnn/baselines/: __init__.py  bag_of_aa.py  global_mean.py
pepfraggnn/data/: __init__.py  dataset.py  features.py  graph.py  loader.py  targets.py
pepfraggnn/models/: __init__.py  backbones.py  cleavage_gnn.py  pooled_gnn.py
scripts/: evaluate.py  predict.py  reproduce.py  run_baselines.py  train.py
src/: collate.py  config.py  dataset.py  graph_builder.py  llm_utils.py  model.py  pep_dataset.py  targets.py
test-programs/: test_load.py  test_path.py  test_sys_config.py
tests/: test_graph.py  test_metrics.py  test_model.py  test_targets.py
