[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pepfraggnn"
version = "0.2.0"
description = "Cleavage-site-centric GNN for peptide fragment-ion probability (Pep2Prob)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.6",
    "torch-geometric>=2.5,<2.7",
    "numpy>=1.26,<2.2",
    "scipy>=1.11",
    "pandas>=2.1",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "datasets>=2.18",
    "huggingface-hub>=0.23",
]

[project.optional-dependencies]
app = ["streamlit>=1.33", "matplotlib>=3.8", "plotly>=5.20"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["pepfraggnn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
